--- a/webapp/restapi/pom.xml
+++ b/webapp/restapi/pom.xml
@@ -17,7 +17,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-security</artifactId>
+    		<version>2.1.2.RELEASE</version>
+	</dependency>
 	</dependencies>
+		
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
