Resolving conflicts with master branch

--- a/webapp/.project
+++ b/webapp/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>csye6225-spring2019</name>
+	<name>webapp</name>
 	<comment></comment>
 	<projects>
 	</projects>
