--- a/webapp/restapi/src/main/resources/application.properties
+++ b/webapp/restapi/src/main/resources/application.properties
@@ -10,3 +10,13 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
+
+## MULTIPART (MultipartProperties)
+# Enable multipart uploads
+spring.http.multipart.enabled=true
+# Threshold after which files are written to disk.
+spring.http.multipart.file-size-threshold=2KB
+# Max file size.
+spring.http.multipart.max-file-size=200MB
+# Max Request Size
+spring.http.multipart.max-request-size=215MB
