--- a/webapp/restapi/pom.xml
+++ b/webapp/restapi/pom.xml
@@ -54,6 +54,13 @@
 			<artifactId>jaxb-api</artifactId>
 			<version>2.3.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3 -->
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-s3</artifactId>
+			<version>1.11.502</version>
+		</dependency>
+
 	</dependencies>
 
 	<properties>
