Link subnet and security group to EC2 and RDS

--- a/infrastructure/aws/cloudformation/csye6225-cf-application.json
+++ b/infrastructure/aws/cloudformation/csye6225-cf-application.json
@@ -12,6 +12,26 @@
         "KeyName": {
             "Type": "String",
             "Description" : "Please enter string for Key Name"
+         },
+         "WebServerSGID": {
+             "Type": "String",
+             "Description" : "Please enter string for web server security group"
+         },
+         "DBServerSGID": {
+             "Type": "String",
+             "Description" : "Please enter string for db server security group"
+         },
+         "Subnet1": {
+             "Type": "String",
+             "Description" : "Please enter string for subnet 1"
+         },
+         "Subnet2": {
+             "Type": "String",
+             "Description" : "Please enter string for subnet 2"
+         },
+         "Subnet3": {
+             "Type": "String",
+             "Description" : "Please enter string for subnet 3"
          }
    },
    "Resources" : {
@@ -20,14 +40,11 @@
            "Properties": {
                "InstanceType"   : "t2.micro",
                "ImageId"	: {"Ref" : "ImageId" },
-	       "KeyName"	: {"Ref" : "KeyName" },
-	       "NetworkInterfaces" : [{
-                    "GroupSet"                 : [{ "Fn::ImportValue" :  {"Fn::Sub": "${NetworkStackName}-WebSecurityGroupID" }}], 
-                    "AssociatePublicIpAddress" : "true",
-		    "DeviceIndex"	       : "0",
-                    "DeleteOnTermination"      : "true",
-                    "SubnetId"                 : { "Fn::ImportValue" : {"Fn::Sub": "${NetworkStackName}-SubnetID" } } 
-               }]
+           "KeyName"	: {"Ref" : "KeyName" },
+           "SecurityGroupIds": [
+            {"Ref" : "WebServerSGID" }
+           ],
+           "SubnetId" : {"Ref" : "Subnet1" }
            }
        },
        "DynamoDBInstance" : {
@@ -52,8 +69,8 @@
          "Type" : "AWS::RDS::DBSubnetGroup",
          "Properties" : {
             "DBSubnetGroupDescription" : "DB subnet group for RDS",
-            "SubnetIds" : [ { "Fn::ImportValue" : {"Fn::Sub": "${NetworkStackName}-DBSubnetID1" } },
-		            { "Fn::ImportValue" : {"Fn::Sub": "${NetworkStackName}-DBSubnetID2" } }
+            "SubnetIds" : [ 
+                {"Ref" : "Subnet1" },{"Ref" : "Subnet2" }
 	   	          ],
             "Tags" : [ {"Key" : "String", "Value" : "String"} ]
          }
@@ -71,7 +88,10 @@
                "MasterUsername" : "csye6225master" ,
                "MasterUserPassword" : "csye6225password",
 	       "PubliclyAccessible" : true,
-               "Tags" : [ { "Key" : "Name", "Value" : "My SQL Database" } ]
+               "Tags" : [ { "Key" : "Name", "Value" : "My SQL Database" } ],
+               "VPCSecurityGroups": [
+                {"Ref" : "DBServerSGID" }
+               ]
            },
            "DeletionPolicy" : "Snapshot"
        }
