--- a/webapp/restapi/src/main/resources/application-shubhankar-dev.properties
+++ b/webapp/restapi/src/main/resources/application-shubhankar-dev.properties
@@ -1,7 +1,7 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://localhost:3306/CSYE6225?useSSL=false
-spring.datasource.username = csye6225
-spring.datasource.password = csye6225
+spring.datasource.url = jdbc:mysql://csye6225-spring2019.clfngadfmnft.us-east-1.rds.amazonaws.com:3306/csye6225
+spring.datasource.username = csye6225master
+spring.datasource.password = csye6225password
 
 
 ## Hibernate Properties
