Adding instance profile roles and policy for EC2

--- a/infrastructure/aws/cloudformation/csye6225-cf-application.json
+++ b/infrastructure/aws/cloudformation/csye6225-cf-application.json
@@ -12,6 +12,10 @@
         "KeyName": {
             "Type": "String",
             "Description" : "Please enter string for Key Name"
+         },
+        "BucketName": {
+            "Type": "String",
+            "Description" : "Please enter string for Bucket Name"
          }
    },
    "Resources" : {
@@ -31,7 +35,24 @@
 		    "DeviceIndex"	       : "0",
                     "DeleteOnTermination"      : "true",
                     "SubnetId"                 : { "Fn::ImportValue" : {"Fn::Sub": "${NetworkStackName}-SubnetID" } } 
-               }]
+               }],	     
+	       "IamInstanceProfile" : { "Fn::ImportValue" : "EC2InstanceProfile" },
+	       "UserData":{
+	           "Fn::Base64":{
+                       "Fn::Join":[
+                           "",
+			   [
+			       "#!/bin/bash \n",
+			       "sudo service codedeploy-agent status \n",
+			       "echo export DB_HOST=",{"Fn::GetAtt": ["MariaDBInstance","Endpoint.Address"]}, " >> /etc/profile \n",
+			       "echo export DB_PORT=",{"Fn::GetAtt": ["MariaDBInstance","Endpoint.Port"]}," >> /etc/profile \n",
+			       "echo export DB_USERNAME='csye6225master' >> /etc/profile \n",
+			       "echo export DB_PASSWORD='csye6225password' >> /etc/profile \n",
+		    	       "echo export S3_BUCKET=",{"Fn::Sub": "csye6225-spring2019-${BucketName}.me.csye6225.com" }," >> /etc/profile \n"	       
+			   ]
+		        ]
+	           }		
+	       }
            }
        },
        "DynamoDBInstance" : {
