--- a/webapp/restapi/src/main/resources/application-jayesh-dev.properties
+++ b/webapp/restapi/src/main/resources/application-jayesh-dev.properties
@@ -1,7 +1,7 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://localhost:3306/CSYE6225?useSSL=false
-spring.datasource.username = csye6225
-spring.datasource.password = csye6225
+spring.datasource.url = ${DB_HOST}:${DB_PORT}/csye6225
+spring.datasource.username = ${DB_USERNAME}
+spring.datasource.password = ${DB_PASSWORD}
 
 
 ## Hibernate Properties
@@ -22,4 +22,4 @@ spring.http.multipart.max-file-size=200MB
 spring.http.multipart.max-request-size=215MB
 
 cloud.islocal=false
-cloud.bucketName=csye6225-spring2019-iyerj.me.csye6225.com
+cloud.bucketName=csye6225-spring2019-${S3_BUCKET}.me.csye6225.com
