Changes in properties

--- a/webapp/restapi/src/main/resources/application-jayesh-dev.properties
+++ b/webapp/restapi/src/main/resources/application-jayesh-dev.properties
@@ -22,4 +22,4 @@ spring.http.multipart.max-file-size=200MB
 spring.http.multipart.max-request-size=215MB
 
 cloud.islocal=false
-cloud.bucketName=csye6225-spring2019-${S3_BUCKET}.me.csye6225.com
+cloud.bucketName=${S3_BUCKET}
