--- a/webapp/restapi/src/main/resources/application-jayesh-dev.properties
+++ b/webapp/restapi/src/main/resources/application-jayesh-dev.properties
@@ -1,5 +1,5 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://${DB_HOST}:${DB_PORT}/csye6225
+spring.datasource.url = jdbc:mysql://${DB_HOST}:3306/csye6225
 spring.datasource.username = ${DB_USERNAME}
 spring.datasource.password = ${DB_PASSWORD}
 
