Adding logging properties

--- a/webapp/restapi/src/main/resources/application.properties
+++ b/webapp/restapi/src/main/resources/application.properties
@@ -21,5 +21,9 @@ spring.http.multipart.max-file-size=200MB
 # Max Request Size
 spring.http.multipart.max-request-size=215MB
 
+##Set logging properties
+logging.level.com.restapi=DEBUG
+logging.file=/home/jayeshiyer/csye-webapp.log
+
 cloud.islocal=true
 cloud.bucketName=
