--- a/webapp/restapi/pom.xml
+++ b/webapp/restapi/pom.xml
@@ -82,6 +82,12 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.6</version>
 		</dependency>
+		<dependency>
+   			 <groupId>com.timgroup</groupId>
+    		 <artifactId>java-statsd-client</artifactId>
+    		 <version>3.0.1</version>
+	    </dependency>
+		
 	</dependencies>
 
 	<properties>
