Adding cloudwatch configuration for EC2

--- a/appspec.yml
+++ b/appspec.yml
@@ -4,6 +4,8 @@ os: linux
 files:
   - source: restapi.jar
     destination: /var
+  - source: amazon-cloudwatch-agent.json
+    destination: /opt/aws/amazon-cloudwatch-agent/etc/  
 
 hooks:
   AfterInstall:
