--- a/webapp/restapi/pom.xml
+++ b/webapp/restapi/pom.xml
@@ -19,21 +19,22 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
-					<argLine>-Xmx1024m -Xms1024m -XX:MaxPermSize=512m -Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
+					<argLine>-Xmx1024m -Xms1024m -XX:MaxPermSize=512m
+						-Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
 					<reuseForks>true</reuseForks>
 					<useSystemClassLoader>false</useSystemClassLoader>
 				</configuration>
 				<version>2.20.1</version>
-        	</plugin>
+			</plugin>
 		</plugins>
 		<finalName>restapi</finalName>
 	</build>
 	<repositories>
 		<repository>
-            <id>jboss-repo</id>
-            <url>http://repository.jboss.org/nexus/content/groups/public/</url>
-        </repository>
-  	</repositories>
+			<id>jboss-repo</id>
+			<url>http://repository.jboss.org/nexus/content/groups/public/</url>
+		</repository>
+	</repositories>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -83,11 +84,19 @@
 			<version>2.6</version>
 		</dependency>
 		<dependency>
-   			 <groupId>com.timgroup</groupId>
-    		 <artifactId>java-statsd-client</artifactId>
-    		 <version>3.0.1</version>
-	    </dependency>
-		
+			<groupId>com.timgroup</groupId>
+			<artifactId>java-statsd-client</artifactId>
+			<version>3.0.1</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-lambda -->
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-lambda</artifactId>
+			<version>1.11.525</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<properties>
