--- a/webapp/restapi/pom.xml
+++ b/webapp/restapi/pom.xml
@@ -90,11 +90,23 @@
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-lambda -->
+		<!-- <dependency> <groupId>com.amazonaws</groupId> <artifactId>aws-java-sdk-lambda</artifactId> 
+			<version>1.11.525</version> </dependency> -->
+
+		<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk -->
+<!-- 		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk</artifactId>
+			<version>1.0.002</version>
+		</dependency> -->
+
+		<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-sns -->
 		<dependency>
 			<groupId>com.amazonaws</groupId>
-			<artifactId>aws-java-sdk-lambda</artifactId>
+			<artifactId>aws-java-sdk-sns</artifactId>
 			<version>1.11.525</version>
 		</dependency>
+
 
 
 	</dependencies>
