--- a/infrastructure/aws/cloudformation/csye6225-cf-application.json
+++ b/infrastructure/aws/cloudformation/csye6225-cf-application.json
@@ -129,7 +129,7 @@
            "Type": "AWS::Lambda::Function",
            "Properties": {
 	       "FunctionName": "password_reset",	   
-               "Handler": "com.csy26225.lambda.EmailHandler::handleRequest",
+               "Handler": "com.csye6225.lambda.EmailHandler::handleRequest",
 	       "MemorySize": 128,
 	       "Environment": {
                    "Variables": {
@@ -151,9 +151,9 @@
        "LambdaPermission": {
            "Type": "AWS::Lambda::Permission",
            "Properties": {
-               "Action": "lambda:invokeFunction",
+               "Action": "lambda:InvokeFunction",
                "FunctionName": {"Ref": "LambdaFunction"},
-               "Principal": "apigateway.amazonaws.com",
+               "Principal": "sns.amazonaws.com",
 	       "SourceAccount": {"Ref": "AWS::AccountId"}
                }
        },
