Adding permissions for sendemail to lambda function

--- a/infrastructure/aws/cloudformation/csye6225-cf-application.json
+++ b/infrastructure/aws/cloudformation/csye6225-cf-application.json
@@ -153,8 +153,7 @@
            "Properties": {
                "Action": "lambda:InvokeFunction",
                "FunctionName": {"Ref": "LambdaFunction"},
-               "Principal": "sns.amazonaws.com",
-	       "SourceAccount": {"Ref": "AWS::AccountId"}
+               "Principal": "sns.amazonaws.com"
                }
        },
        "CodeDeployApplication": {
