--- a/infrastructure/aws/cloudformation/csye6225-cf-auto-scaling-application.json
+++ b/infrastructure/aws/cloudformation/csye6225-cf-auto-scaling-application.json
@@ -351,6 +351,22 @@
                    "Events" : ["DEPLOYMENT_FAILURE"]
                }
            }
-       }
+       },
+       "Route53RecordSet" : {
+	   "Type": "AWS::Route53::RecordSet",
+	   "Properties": {
+      		"HostedZoneName" : {"Fn::Join" : ["",[{"Ref" : "csye6225-spring2019-salvimi.me"},"."]] },
+      		"Name": {"Fn::Join" : ["",["",{"Ref" : "csye6225-spring2019-salvimi.me"},"."]] },
+      		"Type": "A",
+      		"AliasTarget": 
+      		{
+          		"HostedZoneId" : {"Fn::GetAtt": ["ElasticLoadBalancer", "CanonicalHostedZoneID"]},
+          		"DNSName": {"Fn::GetAtt": ["ElasticLoadBalancer", "DNSName"]}
+      		}
+    	    }	
+	}
+
+
+
    }  
 }   
