--- a/infrastructure/aws/cloudformation/csye6225-cf-auto-scaling-application.json
+++ b/infrastructure/aws/cloudformation/csye6225-cf-auto-scaling-application.json
@@ -355,8 +355,8 @@
        "Route53RecordSet" : {
 	   "Type": "AWS::Route53::RecordSet",
 	   "Properties": {
-      		"HostedZoneName" : {"Fn::Join" : ["",[{"Ref" : "csye6225-spring2019-salvimi.me"},"."]] },
-      		"Name": {"Fn::Join" : ["",["",{"Ref" : "csye6225-spring2019-salvimi.me"},"."]] },
+      		"HostedZoneName" : {"Fn::Join" : ["",[{"Ref" : "csye6225-spring2019-salvimi"},".me"]] },
+      		"Name": {"Fn::Join" : ["",["",{"Ref" : "csye6225-spring2019-salvimi"},".me"]] },
       		"Type": "A",
       		"AliasTarget": 
       		{
