--- a/infrastructure/aws/cloudformation/csye6225-cf-auto-scaling-application.json
+++ b/infrastructure/aws/cloudformation/csye6225-cf-auto-scaling-application.json
@@ -355,7 +355,7 @@
        "Route53RecordSet" : {
 	   "Type": "AWS::Route53::RecordSet",
 	   "Properties": {
-      		"HostedZoneName" : { "Fn::Sub" : "csye6225-spring2019-${BucketName}.me" },
+      		"HostedZoneName" : { "Fn::Sub" : "csye6225-spring2019-${BucketName}.me." },
       		"Name": { "Fn::Sub" : "csye6225-spring2019-${BucketName}.me"  },
       		"Type": "A",
       		"AliasTarget": 
