--- a/infrastructure/aws/cloudformation/csye6225-cf-auto-scaling-application.json
+++ b/infrastructure/aws/cloudformation/csye6225-cf-auto-scaling-application.json
@@ -95,11 +95,11 @@
 	           "SSLCertificateId" : {"Ref" : "CertificateArn"}	   
 	       }],
        	       "HealthCheck" : {
-               	   "Target" : "HTTP:80/",
+               	   "Target" : "TCP:22",
                    "HealthyThreshold" : "3",
-                   "UnhealthyThreshold" : "5",
+                   "UnhealthyThreshold" : "10",
                    "Interval" : "30",
-                   "Timeout" : "5"
+                   "Timeout" : "10"
                },
 	       "SecurityGroups" : [ { "Ref" : "ELBSecurityGroup" } ],
 	       "Subnets" : [{ "Fn::ImportValue" : {"Fn::Sub": "${NetworkStackName}-SubnetID" }}]
@@ -184,13 +184,13 @@
       "CPUAlarmHigh": {
           "Type": "AWS::CloudWatch::Alarm",
           "Properties": {
-              "AlarmDescription": "Scale-up if CPU > 90% for 10 minutes",
+              "AlarmDescription": "Scale-up if CPU > 10% for 1 minute",
               "MetricName": "CPUUtilization",
               "Namespace": "AWS/EC2",
               "Statistic": "Average",
-              "Period": "300",
+              "Period": "60",
               "EvaluationPeriods": "2",
-              "Threshold": "90",
+              "Threshold": "10",
               "AlarmActions": [
               {
                   "Ref": "WebServerScaleUpPolicy"
@@ -210,13 +210,13 @@
       "CPUAlarmLow": {
           "Type": "AWS::CloudWatch::Alarm",
           "Properties": {
-              "AlarmDescription": "Scale-down if CPU < 70% for 10 minutes",
+              "AlarmDescription": "Scale-down if CPU < 5% for 1 minute",
               "MetricName": "CPUUtilization",
               "Namespace": "AWS/EC2",
               "Statistic": "Average",
-              "Period": "300",
+              "Period": "60",
               "EvaluationPeriods": "2",
-              "Threshold": "70",
+              "Threshold": "5",
               "AlarmActions": [
               {
                   "Ref": "WebServerScaleDownPolicy"
