Associating firewall with Loadbalancer

--- a/infrastructure/aws/cloudformation/csye6225-cf-auto-scaling-application.json
+++ b/infrastructure/aws/cloudformation/csye6225-cf-auto-scaling-application.json
@@ -2990,7 +2990,14 @@
                }
             ]
          }
-      }
+      },
+      "MyWebACLAssociation": {
+          "Type": "AWS::WAFRegional::WebACLAssociation",
+          "Properties": {
+              "ResourceArn": { "Ref": "ElasticLoadBalancer" },
+              "WebACLId": { "Ref": "wafrOwaspACL" }
+           }
+      }	   
 
    }  
 }   
